ARM64: dts: nanopi4: adjust vdd-log to 0.9V
Signed-off-by: jensen <jensenhuang@friendlyarm.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-nanopi4-common.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3399-nanopi4-common.dtsi
@@ -187,7 +187,7 @@
 
 		/* for rockchip boot on */
 		rockchip,pwm_id = <2>;
-		rockchip,pwm_voltage = <1000000>;
+		rockchip,pwm_voltage = <900000>;
 	};
 
 	rt5651_card: rt5651-sound {
