ARM64: dts: nanopi4: update dmc-opp-table for lpddr4
Change-Id: I07b33e3a5613f66c1a51320b3d7d78741ce9276d
Signed-off-by: jensen <jensenhuang@friendlyarm.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-nanopi4-rev07.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-nanopi4-rev07.dts
@@ -116,8 +116,16 @@
 	/delete-node/ opp-600000000;
 	/delete-node/ opp-800000000;
 
+	opp-328000000 {
+		opp-hz = /bits/ 64 <328000000>;
+		opp-microvolt = <900000>;
+	};
 	opp-416000000 {
 		opp-hz = /bits/ 64 <416000000>;
+		opp-microvolt = <900000>;
+	};
+	opp-666000000 {
+		opp-hz = /bits/ 64 <666000000>;
 		opp-microvolt = <900000>;
 	};
 	opp-856000000 {
